feat : user auth jwt , doc :  swagger UI
