# docs/swagger.json
@@ -19,6 +19,105 @@
                 }
             }
         },
+        "/auth/hello": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "tags": [
+                    "用戶"
+                ],
+                "summary": "驗證功能測試路由",
+                "responses": {
+                    "200": {
+                        "description": "{\"code\",\"message\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/login": {
+            "post": {
+                "tags": [
+                    "用戶"
+                ],
+                "summary": "用戶登入",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "使用者名稱",
+                        "name": "username",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "使用者密碼",
+                        "name": "password",
+                        "in": "formData"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"code\",\"message\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/logout": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "tags": [
+                    "用戶"
+                ],
+                "summary": "用戶登出",
+                "responses": {
+                    "200": {
+                        "description": "{\"code\",\"message\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/product/createProduct": {
+            "post": {
+                "tags": [
+                    "商品"
+                ],
+                "summary": "新增商品",
+                "parameters": [
+                    {
+                        "description": " ",
+                        "name": "product",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.CreateProduct"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": " ",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/user/createUser": {
             "post": {
                 "tags": [
@@ -79,36 +178,6 @@
                 }
             }
         },
-        "/user/login": {
-            "post": {
-                "tags": [
-                    "用戶"
-                ],
-                "summary": "所有用戶",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "使用者名稱",
-                        "name": "username",
-                        "in": "formData"
-                    },
-                    {
-                        "type": "string",
-                        "description": "使用者密碼",
-                        "name": "password",
-                        "in": "formData"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "code\",\"message\"}",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
         "/user/updateUser": {
             "post": {
                 "tags": [
@@ -156,6 +225,55 @@
                     }
                 }
             }
+        }
+    },
+    "definitions": {
+        "models.CreateProduct": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "productImg": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "variation": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.CreateProductVariation"
+                    }
+                }
+            }
+        },
+        "models.CreateProductVariation": {
+            "type": "object",
+            "properties": {
+                "price": {
+                    "type": "integer"
+                },
+                "productID": {
+                    "type": "integer"
+                },
+                "productSubcode": {
+                    "type": "integer"
+                },
+                "stock": {
+                    "type": "integer"
+                }
+            }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
